html overflow fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,10 +9,6 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-.content {
-    overflow-x: auto;
-}
-
 a, a:hover {
     color: inherit;
     text-decoration: none;
@@ -21,6 +17,7 @@ a, a:hover {
 
 .navbar {
     color: white;
+    min-width: 70em;
     margin: 0;
 }
 
@@ -71,29 +68,27 @@ a, a:hover {
 
 .itemList {
     display: grid;
+    min-width: 70em;
     grid-template-columns: repeat(auto-fit, minmax(50em, .8fr));
+    grid-gap: 10px;
     justify-content: space-around;
     padding: 2em;
     padding-right: 3em;
     margin: 0 auto;
 }
 
-@media screen and (max-width: 60em){
-    .itemList {
-        width: 70em;
-        grid-template-columns: minmax(50em, .8fr);
-    }
-  }
+.itemTile {
+    height: 20em;
+}
 
 .itemTile a {
-    height: 20em;
+    height: inherit;
     display: grid;
     grid-template-columns: .2fr minmax(0, 1fr);
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
     border-color: rgba(52, 58, 64, 0.2);
-    margin: 3px;
 }
 
 .itemTile a:hover {
@@ -105,6 +100,7 @@ a, a:hover {
 
 .itemImage {
     height: inherit;
+    box-sizing: border-box;
     padding: 10px;
 }
 
